--- a/pom.xml
+++ b/pom.xml
@@ -19,23 +19,14 @@
                 </configuration>
             </plugin>
 
+
             <plugin>
                 <groupId>com.heroku.sdk</groupId>
                 <artifactId>heroku-maven-plugin</artifactId>
                 <version>2.0.13</version>
                 <configuration>
                     <processTypes>
-                        <web>java $JAVA_OPTS -cp target/classes:target/dependency/* net.webapp.App</web>
-                    </processTypes>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>com.heroku.sdk</groupId>
-                <artifactId>heroku-maven-plugin</artifactId>
-                <version>2.0.13</version>
-                <configuration>
-                    <processTypes>
-                        <web>java $JAVA_OPTS -cp target/classes:target/dependency/* net.webapp.App</web>
+                        <web>java $JAVA_OPTS -cp target/classes:target/dependency/* net.myfirst.webapp</web>
                     </processTypes>
                 </configuration>
             </plugin>
@@ -65,6 +56,5 @@
             <version>2.7.1</version>
         </dependency>
     </dependencies>
-
 
 </project>
